fix: fix layout problem

--- a/src/components/index.component.scss
+++ b/src/components/index.component.scss
@@ -8,14 +8,6 @@
   border: 1px solid #e5e5e5;
 }
 
-#index {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-}
-
 #day-layout {
   display: flex;
   flex-direction: row;
@@ -27,4 +19,12 @@
     border: 1px solid #e5e5e5;
     box-sizing: border-box;
   }
+}
+
+#index {
+  width: 100%;
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  box-sizing: border-box;
 }
